 - Bugfix: Fixed an issue where the insets of the EclipseBorder was ignored when calculating the minimum/preferred size of a Dockable.
 
[v1.1.2p2d]
 - API: Made ListSpanStrategy more resilient against early calls to its methods (it did throw an NPE)
 - Bugfix: ListSpanStrategy did not respect the parameter "spanFactoryId" in its constructor
 - API: InternalScreenDockWindowFactory supports setting the layer of the newly created dialogs
 - Bugfix: Made ScreenDockStation aware of extensions when calling the drop(Dockable) method
 - Bugfix: Made ToolbarGroupDockStation searching for a DockController by its parents when missing one
 
[v1.1.2p3]
 ! API: The border of a ScreenDockWindow can now be used to move the window, while resizing is not allowed. In previous versions the border simply was removed if resizing was disabled.
 - Bugfix: CToolbarContentArea made minimized Dockables invisible (actually their size was always close to 0/0)
 - API: If a focused Dockable is put onto a FlapDockStation, the station does open its window
 ! API: Workarounds for Java 6 and 7 now make a distinction between transparency and translucency, opening the path for better transparency support.
 - API: WindowConfiguration supports a new property: shape. Shape tells which parts of a ScreenDockWindow are visible, and which are not.
 
[v1.1.2p4]
 - API: Implemented all the "aside" methods in the toolbar extension
 - API: AbstractCDockable.setLocationAside no longer sets a generic CLocation but a CExtendedModeLocation, which will make the LocationManager to access the original DockableProperty. This makes the method using placeholders more efficiently.
 - API: Border of FlapWindow is now customizeable
 
[v1.1.2p4a]
 - Bugfix: the glass extension could produce a NullPointerException when using only the Core API.
 - API: Added an annoying dialog that pops up when using the Core API, warning the developer that the much better Common API is available. 